[package]
name = "loadjitsu"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.12.1"
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
clap = { version = "4.4.6", features = ["derive"] }
prost = "0.12.1"
prost-derive = "0.12.1"
base64 = "0.21.5"
ureq = "2.8.0"
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["multipart", "json"] }
uuid = "1.5.0"
diesel = { version = "2.1.3", features = ["sqlite"] }
chrono = "0.4.31"
platform-dirs = "0.3.0"
diesel_migrations = "2.1.0"
anyhow = "1.0.75"
tempfile = "3.8.1"
sha2 = "0.10.8"
hex = "0.4.3"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.50"
sysinfo = "0.29.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
